Fix mobile menu layout on mobile devices

--- a/components/main-page/MainHeader.module.scss
+++ b/components/main-page/MainHeader.module.scss
@@ -43,7 +43,6 @@
   .mobileMenu {
     position: absolute;
     top: 99px;
-    left: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
